...
    Box(
        modifier = Modifier
            .height(height_list_header)
            .fillMaxWidth(),
    ) {
        Text(
            text = "Meine Orte",
            fontWeight = FontWeight.Bold,
            modifier = Modifier
                .padding(vertical = margin_medium)
                .padding(start = margin_medium),
        )

...
                        fontWeight = FontWeight.Bold,
                    )
                } else {
                    Image(
                        imageVector = Icons.Default.Edit,
                        colorFilter = ColorFilter.tint(MaterialTheme.colors.onBackground),
                        contentDescription = "Edit Places",
                    )
                }
            }
        }

        Divider(
...
