package de.thb.ui.components.search

import androidx.compose.runtime.Composable
import de.thb.ui.components.RulonaHeader

@Composable
fun RulonaSearchHeader() {
    RulonaHeader(title = "Letzte Suchen")
}
