...
}

@Composable
@Preview
fun RulonaSearchItemPreview() {
    RulonaSearchItem(
        title = "Berlin",
        isBookmarked = true,
        onClick = {},
        onBookmarkClicked = {}
    )
}

